# tercagrapher

./: CMakeLists.txt  KGRAPH_LICENSE  MUPARSER_LICENSE  README  grapher
src/: CMakeLists.txt  equwindow.cpp  equwindow.h  grapher.cpp  grapher.h  grapher2d.cpp  grapher2d.h  grapher3d.cpp  grapher3d.h  graphwindow.cpp  graphwindow.h  liner.cpp  liner.h  main.cpp  window.cpp  window.h
